<resources>
    <string name="app_name">Project</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">184961528959535</string>
    <string name="fb_login_protocol_scheme">fb184961528959535</string>

    <string name="drawer_icon_create_post">&#xE873;</string>
    <string name="drawer_icon_invite_friends">&#xeaab;</string>
    <!-- <string name="drawer_icon_buttons">&#xe802;</string> -->
    <string name="drawer_icon_show_plans">&#xE86D;</string>
    <string name="drawer_icon_text_views">&#xe93f;</string>
    <string name="drawer_icon_search_bars">&#xea01;</string>
    <string name="drawer_icon_friends">&#xE8B6;</string>

    <!-- <string name="drawer_icon_audio_player">&#xe807;</string> -->
    <!-- <string name="drawer_icon_video_player">&#xe808;</string> -->
    <string name="drawer_icon_create_plans">&#xE85D;</string>
    <string name="drawer_icon_add_account">&#xe86f;</string>
    <!-- <string name="drawer_icon_calendars">&#xe811;</string> -->
    <string name="drawer_icon_facebook_friends">&#xE8D3;</string>
    <string name="drawer_icon_profile">&#xeb41;</string>
    <string name="drawer_icon_newsfeed">&#xE86D;</string>
    <string name="drawer_icon_dialogs">&#xea5b;</string>
    <string name="drawer_icon_tabs">&#xeb3b;</string>
    <string name="drawer_icon_wizards">&#xe861;</string>
    <string name="drawer_icon_linked_in">&#xe9f5;</string>
    <string name="drawer_icon_blog">&#xe91b;</string>
    <string name="drawer_icon_git_hub">&#xe99b;</string>
    <string name="drawer_icon_instagram">&#xe9f5;</string>

    <!-- Navigation Drawer icon titles -->
    <string name="drawer_title_create_post">Splash Screens</string>
    <string name="drawer_title_invite_friends">Progress Bars</string>
    <!-- <string name="drawer_title_buttons">Buttons</string> -->
    <string name="drawer_title_show_plans">Shape Image Views</string>
    <string name="drawer_title_text_views">Text Views</string>
    <string name="drawer_title_search_bars">Search Bars</string>
    <string name="drawer_title_friends">Friends</string>
    <!-- <string name="drawer_title_audio_player">Audio Player</string> -->
    <!-- <string name="drawer_title_video_player">Video Player</string> -->
    <string name="drawer_title_create_plans">Create Plans</string>
    <string name="drawer_title_add_account">Check Boxes</string>
    <!-- <string name="drawer_title_calendars">Calendars</string> -->
    <string name="drawer_title_facebook_friends">Facebook Friends</string>
    <string name="drawer_title_profile">Profile</string>
    <string name="drawer_title_newsfeed">Newsfeed</string>
    <string name="drawer_title_dialogs">Dialogs</string>
    <string name="drawer_title_tabs">Tabs</string>
    <string name="drawer_title_wizards">Wizards</string>
    <string name="drawer_title_linked_in">LinkedIn</string>
    <string name="drawer_title_blog">Blog</string>
    <string name="drawer_title_git_hub">GitHub</string>
    <string name="drawer_title_instagram">Instagram</string>

    <string name="fontello_logo">&#xe8ad;</string>
    <string name="fontello_search">&#xea01;</string>
    <string name="fontello_x_mark">&#xe887;</string>
    <string name="fontello_x_mark_masked">&#xe885;</string>
    <string name="fontello_microfon">&#xea18;</string>
    <string name="fontello_user">&#xe800;</string>
    <string name="fontello_password">&#xe9df;</string>
    <string name="fontello_upload">&#xeb30;</string>
    <string name="fontello_play">&#xea7d;</string>
    <string name="fontello_heart_empty">&#xe9b5;</string>
    <string name="fontello_heart_full">&#xe9b6;</string>
    <string name="fontello_drag_and_drop">&#xe988;</string>

    <!-- Material Design Icons -->
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_bookmark">&#xe921;</string>
    <string name="material_icon_bike">&#xe915;</string>
    <string name="material_icon_box_full">&#xe86b;</string>
    <string name="material_icon_clock">&#xe881;</string>
    <string name="material_icon_check">&#xe867;</string>
    <string name="material_icon_checked_full">&#xe86f;</string>
    <string name="material_icon_check_empty">&#xe86a;</string>
    <string name="material_icon_check_full">&#xe86e;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_cart">&#xe857;</string>
    <string name="material_icon_chevron_down">&#xe874;</string>
    <string name="material_icon_chevron_up">&#xe877;</string>
    <string name="material_icon_date">&#xe848;</string>
    <string name="material_icon_drink">&#xea08;</string>
    <string name="material_icon_dollar">&#xe892;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_eat">&#xeac6;</string>
    <string name="material_icon_friends">&#xe8d5;</string>
    <string name="material_icon_flag">&#xe96a;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_go">&#xea04;</string>
    <string name="material_icon_go_left">&#xe875;</string>
    <string name="material_icon_go_right">&#xe876;</string>
    <string name="material_icon_home_variant">&#xe9bd;</string>
    <string name="material_icon_home">&#xe9be;</string>
    <string name="material_icon_hotels">&#xeae3;</string>
    <string name="material_icon_heart_outline">&#xe9b3;</string>
    <string name="material_icon_headphones">&#xe9b1;</string>
    <string name="material_icon_human">&#xe9c5;</string>
    <string name="material_icon_headline">&#xeb40;</string>
    <string name="material_icon_image_box">&#xe952;</string>
    <string name="material_icon_info">&#xe9d4;</string>
    <string name="material_icon_info_box">&#xe896;</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_line_spacing">&#xe988;</string>
    <string name="material_icon_note">&#xea23;</string>
    <string name="material_icon_message">&#xea12;</string>
    <string name="material_icon_play">&#xe831;</string>
    <string name="material_icon_play_single">&#xea7d;</string>
    <string name="material_icon_play_square">&#xea7a;</string>
    <string name="material_icon_play_circle">&#xea7b;</string>
    <string name="material_icon_play_outline">&#xea7b;</string>
    <string name="material_icon_pig">&#xea72;</string>
    <string name="material_icon_password">&#xe9fa;</string>
    <string name="material_icon_plus_box">&#xea7f;</string>
    <string name="material_icon_party">&#xe937;</string>
    <string name="material_icon_point_empty">&#xe868;</string>
    <string name="material_icon_point_full">&#xe869;</string>
    <string name="material_icon_star_outline">&#xeade;</string>
    <string name="material_icon_star_half">&#xeadd;</string>
    <string name="material_icon_star">&#xeadf;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="material_icon_skip_next">&#xeaca;</string>
    <string name="material_icon_skip_previous">&#xeacb;</string>
    <string name="material_icon_soundcloud">&#xead3;</string>
    <string name="material_icon_statistics">&#xea87;</string>
    <string name="material_icon_shop">&#xe858;</string>
    <string name="material_icon_sleep">&#xe9c2;</string>
    <string name="material_icon_settings">&#xeabe;</string>
    <string name="material_icon_state">&#xeb62;</string>
    <string name="material_icon_to_left">&#xe876;</string>
    <string name="material_icon_video">&#xeb39;</string>
    <string name="material_icon_undo">&#xeb2c;</string>
    <string name="material_icon_unfold_more">&#xeb2f;</string>
    <string name="material_icon_w_shop">&#xeb4f;</string>
    <string name="material_icon_cloud_univ_first">&#xeb54;</string>
    <string name="material_icon_cloud_univ_second">&#xeb5a;</string>
    <string name="material_icon_cloud_univ_third">&#xeb55;</string>

    <!-- Content description strings -->
    <string name="cd_background_image">background image</string>
    <string name="cd_main_image">main image</string>

    <!-- TextView related strings -->
    <string name="typography1">Typography I</string>
    <string name="typography2">Typography II</string>
    <string name="typography3">Typography III</string>
    <string name="material_design">Material design</string>
    <string name="material_design_variation">Material design variation</string>
    <string name="all_set_by_google_instructions_of_material_design">All set by Google instructions of Material Design</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum_short">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="thiner_and_lighter_version">Thiner and lighter version of Material design</string>
    <string name="thicker_and_darker_version">Thicker and darker version of Material design</string>
    <string name="number_of_images">%d image(s)</string>
    <string name="new_york">New York</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="welcome">Welcome!</string>
    <string name="undo_deletion">UNDO DELETION</string>
    <string name="undo_deletion_travel">WOOHOO! &#160;&#160;\nI\'VE MADE IT!</string>
    <string name="download">DOWNLOAD</string>
    <string name="done">DONE</string>
    <string name="error">ERROR</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="skip">SKIP</string>
    <string name="raised">RAISED</string>
    <string name="flat">FLAT</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="action_previous">Previous</string>

    <!-- For Update -->
    <string name="confirm_exit">Press Back button again to exit</string>
    <string name="stay_tuned">STAY TUNED FOR NEW \nTHEMES AND FREEBIES.</string>
    <string name="subscribe_to">SUBSCRIBE TO \nOUR NEWSLETTER!</string>
    <string name="your_email">Your e-mail</string>
    <string name="mailchimp_list_id"></string>
    <string name="server_num"></string>
    <string name="mailchimp_key"></string>


    <string name="now_time_range">now</string>

    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>

    <string name="default_image_url">https://www.google.co.in/url?sa=i&amp;rct=j&amp;q=&amp;esrc=s&amp;source=images&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjYlvLV4JnaAhXLwI8KHcQuBzMQjRx6BAgAEAU&amp;url=https%3A%2F%2Fwww.puriindahmall.co.id%2Fassets%2Fimg%2F%3FDD&amp;psig=AOvVaw3O-zisU7H-vKTN-bFL8S52&amp;ust=1522695404304827</string>

</resources>
