<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.projectcopy.SearchFriendsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/background_media"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/gradient_background_media"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.example.acer.projectcopy.font.RobotoTextView
                    android:id="@+id/activity_search_bar_media_filters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/transparent_button_selector"
                    android:text="Search by"
                    android:textColor="@android:color/white"
                    android:textSize="34sp"
                    app:typeface="robotoThin" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                        android:id="@+id/activity_search_bar_media_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0"
                        android:padding="8dp"
                        android:text="@string/material_icon_chevron_down"
                        android:textColor="@android:color/white"
                        android:textSize="32sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_search_bar_media_filters_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/search_friends_bar_background"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_note"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />

                        <com.example.acer.projectcopy.font.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:background="@drawable/transparent_button_selector"
                            android:maxLines="1"
                            android:text="Name"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            app:typeface="robotoThin" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:id="@+id/activity_search_bar_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_check_empty"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/search_friends_bar_background"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_headphones"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />

                        <com.example.acer.projectcopy.font.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:background="@drawable/transparent_button_selector"
                            android:maxLines="1"
                            android:text="Native Place"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            app:typeface="robotoThin" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:id="@+id/activity_search_bar_native_place"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_check_empty"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/search_friends_bar_background"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_human"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />

                        <com.example.acer.projectcopy.font.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:background="@drawable/transparent_button_selector"
                            android:maxLines="1"
                            android:text="Age"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            app:typeface="robotoThin" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:id="@+id/activity_search_bar_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_check_empty"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/search_friends_bar_background"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_headline"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />

                        <com.example.acer.projectcopy.font.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:background="@drawable/transparent_button_selector"
                            android:maxLines="1"
                            android:text="Hobbies"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            app:typeface="robotoThin" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical">

                        <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                            android:id="@+id/activity_search_bar_hobbies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="0"
                            android:padding="8dp"
                            android:text="@string/material_icon_check_empty"
                            android:textColor="@color/material_red_500"
                            android:textSize="26dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/search_friends_bar_background"
                android:gravity="center_vertical">

                <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/fontello_search"
                    android:textColor="@color/material_red_500"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/search_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:textColor="@android:color/white" />

                <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                    android:id="@+id/search_microfon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/fontello_microfon"
                    android:textColor="@color/material_red_500"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <com.example.acer.projectcopy.font.MaterialDesignIconsTextView
                    android:id="@+id/search_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/fontello_x_mark"
                    android:textColor="@color/material_red_500"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <include layout="@layout/list_view" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</FrameLayout>